[package]
name = "wasi-process"
version = "0.1.1"
authors = ["Noah <33094578+coolreader18@users.noreply.github.com>"]
description = "A library to run wasi modules as pseudo-processes"
repository = "https://github.com/robot-rumble/wasi-process"
license = "MIT"
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["sync", "io-util", "stream", "rt-core", "blocking", "rt-util", "rt-threaded"] }
pin-project-lite = "0.1.7"
futures = "0.3.5"

wasmer-runtime = "0.17.0"
wasmer-wasi = "0.17.0"
typetag = "0.1.5"

serde = "1.0.114"


[[example]]
name = "wasirun"
required-features = ["tokio/io-std", "tokio/macros"]
