[package]
name = "wasi-process"
version = "0.3.1"
authors = ["Noah <33094578+coolreader18@users.noreply.github.com>"]
description = "A library to run wasi modules as pseudo-processes"
repository = "https://github.com/robot-rumble/wasi-process"
license = "MIT"
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["io-util", "rt", "rt-multi-thread"] }
parking_lot = "0.11"
bytes = "1.0"

wasmer = { version = "1.0.0", default-features = false }
wasmer-wasi = "1.0.0"
typetag = "0.1.5"

serde = "1.0.114"

[dev-dependencies]
tokio = { version = "1.4", features = ["macros", "io-std"] }
wasmer = "1.0.0"
